<resources>
    <string name="app_name">AquaSmart</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_monitor">Water</string>
    <string name="title_predict">Predict</string>
    <string name="title_guide">Guide</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weather">Weather</string>
    <string name="report">Report</string>
    <string name="monitor_your_water">Monitor your Water!</string>
    <string name="please_input_your_water_condition">Please input your water condition</string>
    <string name="temperature">Temperature</string>
    <string name="input_in_celcius">Input in celcius</string>
    <string name="turbidity_level">Turbidity level</string>
    <string name="input_in_turbidity_ntu">Input in Turbidity (NTU)</string>
    <string name="water_ph">Water pH</string>
    <string name="input_ph_water">Input pH water</string>
    <string name="input">Input</string>
    <string name="go_to_profile">Go Profil</string>
    <string name="tagline">Pure Waters, Pure Quality Fish</string>
    <string name="AQUA">AQUA SMART</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_in_to_your_account">Sign in to your Account</string>
    <string name="enter_your_email_and_password_to_log_in">Enter your email and password to log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="already_have_an_account">Aleardy have an account?</string>
    <string name="first_name">First name</string>
    <string name="fullname">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="birth_date">Birth Date</string>
    <string name="set_password">Set Password</string>
    <string name="back">Back</string>
    <string name="alereadylogin">Login</string>
    <string name="result_water">Your Water Quality</string>
    <string name="update_picture">Update Picture</string>
    <string name="Logout">Log Out</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="apakah_anda_yakin_ingin_logout">Apakah Anda yakin ingin logout?</string>
    <string name="Harvest_Prediction">Harvest Prediction</string>
    <string name="subpredict">Please input your fish size data and water quality data</string>
    <string name="fishdata">Size Of Fish (cm)</string>
    <string name="watercondition">Water Condition</string>
    <string name="jenisikan">Fish Type</string>
    <string name="jumlahpakan">Total Feeds (kg)</string>
    <string name="predictresult">"Prediction Result "</string>
    <string name="AquaculturePerformanceReport">Aquaculture Performance Report</string>
    <string name="please_input_your_performance">Input your Performance Report in Rp</string>
    <string name="dataCollection">Data Collection</string>
    <string name="biayaPakan">Feeds cost</string>
    <string name="labor">Labor</string>
    <string name="other_cost">Other Cost</string>
    <string name="number_of_farmed_fish">Number of Farmed Fish</string>
    <string name="fish_sold">Fish Sold</string>
    <string name="fish_selling">Fish Selling Price</string>
    <string name="count">Count</string>
    <string name="previosmonthsprofit">Previous Month\'s Profit</string>
    <string name="result_report">Result Performance Report</string>
</resources>