<!-- res/layout/custom_logout_dialog.xml -->
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:clickable="true"
    android:focusable="true"
    app:cardBackgroundColor="@color/dongker"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/dialogMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apakah_anda_yakin_ingin_logout"
        android:fontFamily="@font/poppins_reguler"
        android:textSize="18sp"
        android:paddingTop="25dp"
        android:textColor="@color/white"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="60dp">

        <Button
            android:id="@+id/btnYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:backgroundTint="@color/black"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/purple_200"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
