<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.predict.PredictFragment">

    <LinearLayout
        android:id="@+id/header_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Harvest_Prediction"
            android:textColor="@color/black"
            android:fontFamily="@font/poppins_medium"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvsubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_reguler"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/subpredict"
            android:textColor="@color/gray"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_container">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_fishdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/fishdata"
            app:startIconDrawable="@drawable/baseline_dataset">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fishdata"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_watercondition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/watercondition"
            app:startIconDrawable="@drawable/baseline_water_drop_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_turbidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_jenisikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/jenisikan"
            app:startIconDrawable="@drawable/ic_fish">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_jumlahpakan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/jumlahpakan"
            app:startIconDrawable="@drawable/baseline_cookie_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_jmlpakan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:elevation="4dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/input"
        android:textColor="@color/white"
        app:backgroundTint="@color/dongker"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:rippleColor="@color/purple_200" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/go_to_profile"
        android:src="@drawable/profile"
        app:backgroundTint="@color/dongker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_input"
        app:rippleColor="@color/white"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>